--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^34.0.0",
+    "ag-grid-react": "^34.0.0",
     "i18next": "^25.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
