--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^34.0.0",
     "ag-grid-react": "^34.0.0",
+    "ajv": "^8.17.1",
     "i18next": "^25.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.6.3",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
