--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "ag-grid-community": "^34.0.0",
     "ag-grid-react": "^34.0.0",
     "ajv": "^8.17.1",
+    "bootstrap": "^5.3.7",
     "i18next": "^25.3.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.6.3",
