--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "ag-grid-community": "^34.0.0",
     "ag-grid-react": "^34.0.0",
     "ajv": "^8.17.1",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.7",
     "i18next": "^25.3.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.6.3",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
